--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
                             data-zh-placeholder="请输入8位订单号（字母或数字）"
                             data-en-placeholder="Enter 8-character tracking number (letters or numbers)" maxlength="8"
                             pattern="[A-Za-z0-9]{8}">
-                        <button type="button" id="generateTrackingBtn" class="btn btn-secondary" data-zh="生成随机订单号"
-                            data-en="Generate Random Number">生成随机订单号</button>
+                        <!-- <button type="button" id="generateTrackingBtn" class="btn btn-secondary" data-zh="生成随机订单号"
+                            data-en="Generate Random Number">生成随机订单号</button> -->
                         <button type="button" id="trackBtn" class="btn btn-primary" data-zh="查询"
                             data-en="Track">查询</button>
                     </div>
